Stop select2 getting too wide

--- a/themes/default/css/widget_select2.css
+++ b/themes/default/css/widget_select2.css
@@ -139,6 +139,7 @@ html[dir="rtl"] .select2-container .select2-choice > .select2-chosen {
 
 .select2-drop {
     width: 100%;
+	 max-width: 700px;
     margin-top: -1px;
     position: absolute;
     z-index: 9999;
